5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4464/executions/1771_1577.log
== TEST (2019-05-24 15:42:13) 
-- CODE:
from numpy import *


a = float(input("insira a acelera, men: "))
v0 = float(input("insira a v0 do car, men: "))
n = int(input("insira um numero positivo: "))

vetor = array(arange(n))
cont = 0

while (cont < (len(vetor)-1)):
	vetor[cont] = ((a*(vetor[cont]**2))/2) + v0*vetor[cont]
	cont+=1
print(vetor)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 15:48:19) 
-- CODE:
from numpy import *


a = float(input("insira a acelera, men: "))
v0 = float(input("insira a v0 do car, men: "))
n = int(input("insira um numero positivo: "))

t = array(arange(n))
cont = 0
d = zeros(n)

while (cont < (len(vetor)-1)):
	d = ((a*(t[cont]**2))/2) + t[cont]
	cont+=1
print(vetor)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 15:48:41) 
-- CODE:
from numpy import *


a = float(input("insira a acelera, men: "))
v0 = float(input("insira a v0 do car, men: "))
n = int(input("insira um numero positivo: "))

t = array(arange(n))
cont = 0
d = zeros(n)

while (cont < (len(d)-1)):
	d = ((a*(t[cont]**2))/2) + t[cont]
	cont+=1
print(vetor)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 15:49:14) 
-- CODE:
from numpy import *


a = float(input("insira a acelera, men: "))
v0 = float(input("insira a v0 do car, men: "))
n = int(input("insira um numero positivo: "))

t = array(arange(n))
cont = 0
d = zeros(n)

while (cont < (size(d)):
	d = ((a*(t[cont]**2))/2) + t[cont]
	cont+=1
print(vetor)


-- ERROR:
File "XXXX", line 12
    while (cont < (size(d)):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 15:49:23) 
-- CODE:
from numpy import *


a = float(input("insira a acelera, men: "))
v0 = float(input("insira a v0 do car, men: "))
n = int(input("insira um numero positivo: "))

t = array(arange(n))
cont = 0
d = zeros(n)

while (cont < (len(d)):
	d = ((a*(t[cont]**2))/2) + t[cont]
	cont+=1
print(vetor)


-- ERROR:
File "XXXX", line 12
    while (cont < (len(d)):
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 15:49:34) 
-- CODE:
from numpy import *


a = float(input("insira a acelera, men: "))
v0 = float(input("insira a v0 do car, men: "))
n = int(input("insira um numero positivo: "))

t = array(arange(n))
cont = 0
d = zeros(n)

while (cont < (len(d))):
	d = ((a*(t[cont]**2))/2) + t[cont]
	cont+=1
print(vetor)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 15:49:40) 
-- CODE:
from numpy import *


a = float(input("insira a acelera, men: "))
v0 = float(input("insira a v0 do car, men: "))
n = int(input("insira um numero positivo: "))

t = array(arange(n))
cont = 0
d = zeros(n)

while (cont < (size(d))):
	d = ((a*(t[cont]**2))/2) + t[cont]
	cont+=1
print(vetor)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 15:49:40) 
-- CODE:
from numpy import *


a = float(input("insira a acelera, men: "))
v0 = float(input("insira a v0 do car, men: "))
n = int(input("insira um numero positivo: "))

t = array(arange(n))
cont = 0
d = zeros(n)

while (cont < (size(d))):
	d = ((a*(t[cont]**2))/2) + t[cont]
	cont+=1
print(vetor)


-- EXECUTION TIME:
0.508731
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1771/1577/main.py", line 15, in <module>
    print(vetor)
NameError: name 'vetor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 15:51:08) 
-- CODE:
from numpy import *


a = float(input("insira a acelera, men: "))
v0 = float(input("insira a v0 do car, men: "))
n = int(input("insira um numero positivo: "))

t = array(arange(n))
cont = 0
d = zeros(n)

while (cont < (size(d))):
	d = ((a*(t[cont]**2))/2) + t[cont]
	cont+=1
print(vetor)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 15:51:20) 
-- CODE:
from numpy import *


a = float(input("insira a acelera, men: "))
v0 = float(input("insira a v0 do car, men: "))
n = int(input("insira um numero positivo: "))

t = array(arange(n))
cont = 0
d = zeros(n)

while (cont < (size(d))):
	d = ((a*(t[cont]**2))/2) + t[cont]
	cont+=1
print(vetor)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 15:51:34) 
-- CODE:
from numpy import *


a = float(input("insira a acelera, men: "))
v0 = float(input("insira a v0 do car, men: "))
n = int(input("insira um numero positivo: "))

t = array(arange(n))
cont = 0
d = zeros(n)

while (cont < (size(d))):
	d = ((a*(t[cont]**2))/2) + t[cont]
	cont+=1
print(d)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 15:51:56) 
-- CODE:
from numpy import *


a = float(input("insira a acelera, men: "))
v0 = float(input("insira a v0 do car, men: "))
n = int(input("insira um numero positivo: "))

t = array(arange(n))
cont = 0
d = zeros(n)

while (cont < (size(d))):
	d[cont] = ((a*(t[cont]**2))/2) + t[cont]
	cont+=1
print(d)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 15:53:03) 
-- CODE:
from numpy import *


a = float(input("insira a acelera, men: "))
v0 = float(input("insira a v0 do car, men: "))
n = int(input("insira um numero positivo: "))

t = array(arange(n))
cont = 0
d = zeros(n)

while (cont < (size(d))):
	d[cont] = ((a*t[cont]**2)/2) + v0 * t[cont]
	cont+=1
print(d)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 15:53:24) 
-- CODE:
from numpy import *


a = float(input("insira a acelera, men: "))
v0 = float(input("insira a v0 do car, men: "))
n = int(input("insira um numero positivo: "))

t = array(arange(n))
cont = 0
d = zeros(n)

while (cont < (size(d))):
	d[cont] = ((a*t[cont]**2)/2) + v0 * t[cont]
	cont+=1
print(d)


-- EXECUTION TIME:
0.375375
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[  0.    4.    9.2  15.6  23.2  32.   42.   53.2  65.6  79.2  94.  110. ]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[    0.     81.4   172.6   273.6   384.4   505.    635.4   775.6   925.6
  1085.4  1255.   1434.4  1623.6  1822.6  2031.4  2250.   2478.4  2716.6
  2964.6  3222.4  3490.   3767.4  4054.6  4351.6  4658.4  4975.   5301.4
  5637.6  5983.6  6339.4  6705.   7080.4  7465.6  7860.6  8265.4  8680.
  9104.4  9538.6  9982.6 10436.4 10900.  11373.4 11856.6]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
